--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,33 @@ jobs:
       run: |
         cmake ..
         make
-    - name: Run tests
-      working-directory: ${{ env.path }}
-      run: ./NumberGenerators-ut
+    - name: Check deps
+      run: |
+          apt-get update
+          apt-get install -y lcov curl wget git cmake ninja-build g++ libboost-all-dev libmosquitto-dev pkg-config jq perl-base
+          ninja --version
+          cmake --version
+          wget -O Juniper.deb https://www.juniper-lang.org/installers/Juniper-3.0.0.deb
+          apt-get install ./Juniper.deb
+    - name: Setup global CMake interceptor
+      run: ci/setup-cmake-interceptor.sh
+    - name: CMake configure
+      run: |
+          cmake -G Ninja \
+          -DCMAKE_BUILD_TYPE=Debug \
+          -DSMCE_COVERAGE=On \
+          -DSMCE_BUILD_STATIC=Off \
+          -DSMCE_CXXRT_LINKING=SHARED \
+          -DSMCE_BOOST_LINKING=SHARED \
+          -DSMCE_MOSQUITTO_LINKING=SHARED \
+          -DSMCE_TEST_JUNIPER=On \
+          -B ./build
+    - name: CMake build
+      run: cmake --build ./build
+    - name: Build & Run tests
+      run: |
+          cmake --build ./build --target SMCE_Tests
+          (cd build/test/; ctest --output-on-failure)
     - name: Collect C++ coverage information
       run: |
           lcov --directory . --capture --output-file coverage.info
